postgres-expense-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: expense_app
            - name: POSTGRES_PASSWORD
              value: YoniGeo2024!
            - name: POSTGRES_USER
              value: yoniss
            - name: "PORT"
              value: "5432"
          image: postgres
          name: postgres
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/data
              name: postgresql-pv-claim
      restartPolicy: Always
      volumes:
        - name: postgresql-pv-claim
          persistentVolumeClaim:
            claimName: postgresql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: NodePort
status:
  loadBalancer: {}
