smtp4dev-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp4dev
spec:
  selector:
    app: smtp4dev
  ports:
    - name: smtp
      protocol: TCP
      port: 2525
      targetPort: 25
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp4dev
  labels:
    app: smtp4dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      containers:
        - name: smtp4dev
          image: rnwood/smtp4dev
          ports:
            - containerPort: 80
            - containerPort: 25
