spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  tls:
    - secretName: cloudflare2
  rules:
    - host: www.abyssiniaethio.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: expense-spring
                port:
                  number: 8085
